force-app/main/default/objects/Contact_Relationship__c.object
<CustomObject>
    <description>used to join contacts to contacts, and describe the link between them</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>the student side of the relationship being described</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ndicates whether a record is active</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup field which links the current relationship record to the reciprocal relationship record.</description>
        <label>Reciprocal Relationship</label>
        <referenceTo>Contact_Relationship__c</referenceTo>
        <relationshipLabel>Contact Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the relation side of the relationship being described</description>
        <label>To Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Relationships (Relation)</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>Type of relationship being described</description>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Emergency Contact</fullName>
                </value>
                <value>
                    <fullName>Acquaintance</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Aunt/Uncle</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Deceased Spouse</fullName>
                </value>
                <value>
                    <fullName>Ex-Partner</fullName>
                </value>
                <value>
                    <fullName>Ex-Spouse</fullName>
                </value>
                <value>
                    <fullName>Former Assistant</fullName>
                </value>
                <value>
                    <fullName>Former Manager</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grand Child</fullName>
                </value>
                <value>
                    <fullName>Grand Parent</fullName>
                </value>
                <value>
                    <fullName>Great Aunt/Uncle</fullName>
                </value>
                <value>
                    <fullName>Great Grand Child</fullName>
                </value>
                <value>
                    <fullName>Great Grand Parent</fullName>
                </value>
                <value>
                    <fullName>Great Niece/Nephew</fullName>
                </value>
                <value>
                    <fullName>Legal Guardian</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Mother/Father in Law</fullName>
                </value>
                <value>
                    <fullName>Neighbor</fullName>
                </value>
                <value>
                    <fullName>Niece/Nephew</fullName>
                </value>
                <value>
                    <fullName>Other Relative</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Philanthropy Advisor</fullName>
                </value>
                <value>
                    <fullName>Philanthropy Client</fullName>
                </value>
                <value>
                    <fullName>Scheduler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Indicates how the information was acquired.</description>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Effective from/start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The Type of the relationship, i.e. describing the connection between contacts/persons.</description>
        <inlineHelpText>Describe this person&apos;s relationship to the new related contact</inlineHelpText>
        <label>Has this relationship</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                    <label>Grand Child</label>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                    <label>Grand Parent</label>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Aunt/Uncle</fullName>
                </value>
                <value>
                    <fullName>Great Aunt/Uncle</fullName>
                </value>
                <value>
                    <fullName>Great Grand Child</fullName>
                </value>
                <value>
                    <fullName>Great Grand Parent</fullName>
                </value>
                <value>
                    <fullName>Great Niece/Nephew</fullName>
                </value>
                <value>
                    <fullName>Mother/Father in Law</fullName>
                </value>
                <value>
                    <fullName>Niece/Nephew</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Sister/Brother in Law</fullName>
                </value>
                <value>
                    <fullName>Son/Daughter in Law</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Step Child</fullName>
                </value>
                <value>
                    <fullName>Step Mother/Father</fullName>
                </value>
                <value>
                    <fullName>Widow</fullName>
                    <label>Widow/Widower</label>
                </value>
                <value>
                    <fullName>Deceased Spouse</fullName>
                    <label>Spouse (Deceased)</label>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Estate Executor</fullName>
                </value>
                <value>
                    <fullName>Estate Testator</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Ward</fullName>
                </value>
                <value>
                    <fullName>Advisee</fullName>
                    <isActive>false</isActive>
                    <label>Advisee</label>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                    <isActive>false</isActive>
                    <label>Advisor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Relationship</label>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_Greater_Than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	End_Date__c  &lt;  Start_Date__c,
    NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)
	)</errorConditionFormula>
        <errorMessage>End Date cannot be smaller than Start Date</errorMessage>
    </validationRules>
</CustomObject>